entity_macros/tests/ui/derive/ent/unexpected-inner-lit-attr-for-ent-field.stderr
error: Unexpected literal attribute
  --> $DIR/unexpected-inner-lit-attr-for-ent-field.rs:17:17
   |
17 |     #[ent(field("something"))]
   |                 ^^^^^^^^^^^
